lib_LTLIBRARIES =libz2zrt.la

libz2zrt_la_SOURCES = hashtable.c minixml.c socket.c tpool.c		\
					  z2z_string.c list.c rt.c strnstr.c z2z_log.c conn.c miniwget.c	\
					  server.c template.c z2z_random.c lock.c pipe.c

INCLUDES = -I$(top_srcdir)/src/include
include_HEADERS = include/z2z_log.h include/z2z_socket.h include/z2z_connection.h include/z2z_server.h include/z2z_mtl.h include/z2z_template.h include/z2z_string.h include/z2z_list.h include/z2z_dlist.h include/z2z_runtime.h include/z2z_msg_parser.h include/z2z_hashtable.h include/z2z_minixml.h include/z2z_tpool.h include/z2z_strnstr.h include/z2z_random.h include/z2z_lock.h include/z2z_pipe.h $(top_srcdir)/config.h
